@@ -37,14 +37,14 @@
     </modules>
 
     <properties>
-        <revision>22.07.1</revision>
+        <jvm.args>--add-opens=java.base/sun.net=ALL-UNNAMED</jvm.args>
         <maven.compiler.release>17</maven.compiler.release>
         <kotlin.compiler.jvmTarget>17</kotlin.compiler.jvmTarget>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kotlin.version>1.6.21</kotlin.version>
-        <vertx.version>4.2.5</vertx.version>
-        <pulsar.version>2.10.1</pulsar.version>
+        <vertx.version>4.3.7</vertx.version>
+        <pulsar.version>2.10.3</pulsar.version>
         <micrometer.version>1.7.1</micrometer.version>
         <logback.level>all</logback.level>
         <logback.level.auth>${logback.level}</logback.level.auth>
@@ -185,7 +185,7 @@
             <dependency>
                 <groupId>com.github.ben-manes.caffeine</groupId>
                 <artifactId>caffeine</artifactId>
-                <version>2.8.1</version>
+                <version>3.1.2</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -236,7 +236,7 @@
                 <plugin>
                     <groupId>com.google.cloud.tools</groupId>
                     <artifactId>jib-maven-plugin</artifactId>
-                    <version>3.2.1</version>
+                    <version>3.3.1</version>
                     <configuration>
                         <from>
                             <image>eclipse-temurin:17</image>
@@ -247,6 +247,7 @@
                         <container>
                             <jvmFlags>
                                 <jvmFlag>--enable-preview</jvmFlag>
+                                <jvmFlag>--add-opens=java.base/sun.net=ALL-UNNAMED</jvmFlag>
                                 <jvmFlag>-Djava.net.preferIPv4Addresses=true</jvmFlag>
                                 <jvmFlag>-Djava.net.preferIPv4Stack=true</jvmFlag>
                                 <jvmFlag>-Dlogback.configurationFile=/app/config/logback.xml</jvmFlag>
